# mizunashi-work-playbook

./: .ansible.cfg  .editorconfig  .gitignore  LICENSE.md  Makefile  README.md  Vagrantfile  ansible.cfg  inventory_vagrant.yml  playbook-all.yml  playbook-backbone.yml  playbook-base.yml  playbook-firewall.yml  playbook-internal-backbone.yml  playbook-internal-base.yml  playbook-internal-dns.yml  playbook-internal.yml  playbook-public-nginx-site.yml  playbook-public-nginx-sites.yml  playbook-public.yml  playbook-services.yml  playbook-site.yml  pyproject.toml
.github/workflows/: build.yml
assets/: vagrant_ssh_privkey
assets/private_ca/: gen-tls-cert  gen-vars  gen-vars.m4  req.cnf
assets/ssh_keys/: ssh_privkey_ed25519.encrypted
cue.mod/: module.cue
cue_compiler/: __main__.py  compiler.py
cue_types/: ansible.cue  types.cue
cuetypes/: types.cue
docs/: 01-Setup.md  02-Mastodon.md  02-Migrate-Instance.md
grafana_dashboard_formatter/: __main__.py  formatter.py
group_vars/: internal_vagrant.cue  public_vagrant.cue  vagrant.cue  vagrant.yml
host_vars/: internal-mizunashi-work.cue  internal-mizunashi-work.yml  public-mizunashi-work.cue  public-mizunashi-work.yml
private_ca_vagrant/: ca_vars.cue  gen-tls-cert  gen-vars  vars.cue
roles/base/: schema.cue
schemas/: group_vars_all.cue  group_vars_internal.cue  group_vars_public.cue  host_vars.cue
scripts/: private-ca-setup  private-cacerts-setup  scp  ssh  vagrant-grafana-forward  vagrant-prometheus-forward
vagrant-private-ca/: gen-tls-cert
vagrant_private_ca/: gen-tls-cert  gen-vars  req.cnf  vars.cue
(+621 files in other folders)
