[tool.poetry]
name = "mizunashi-work-playbook"
version = "0.1.0"
description = ""
authors = ["Mizunashi Mana <mizunashi-mana@noreply.git>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^7.3.0"
pyyaml = "^6.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
