[tool.poetry]
name = "mizunashi-work-playbook"
version = "0.1.0"
description = ""
authors = ["Mizunashi Mana <mizunashi-mana@noreply.git>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "*"
pyyaml = "*"
passlib = "*"
jmespath = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
